{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 27,
  "lineage": "64ea9eac-1378-8242-4512-35b00b8365be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f3a249065a2b419",
            "arn": "arn:aws:ec2:us-east-1:843916523003:elastic-ip/eipalloc-01f3a249065a2b419",
            "domain": "vpc",
            "id": "eipalloc-01f3a249065a2b419",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-19-39-221.compute-1.amazonaws.com",
            "public_ip": "50.19.39.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-bastion-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-bastion-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0544f0a10852e61b9",
            "arn": "arn:aws:ec2:us-east-1:843916523003:elastic-ip/eipalloc-0544f0a10852e61b9",
            "domain": "vpc",
            "id": "eipalloc-0544f0a10852e61b9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-171-200-86.compute-1.amazonaws.com",
            "public_ip": "35.171.200.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-nat-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-nat-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:843916523003:instance/i-083a03a246cb91d31",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083a03a246cb91d31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "smartgia-qa-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06539858464fc6b6c",
            "private_dns": "ip-10-10-1-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.143",
            "public_dns": "ec2-98-91-20-79.compute-1.amazonaws.com",
            "public_ip": "98.91.20.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6c1daa170954d24",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05270131c92e86204",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-bastion",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-bastion",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7200e8f9de55a2c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:internet-gateway/igw-0fa0af9ceb1ef11e9",
            "id": "igw-0fa0af9ceb1ef11e9",
            "owner_id": "843916523003",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-igw",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-igw",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843916523003:loadbalancer/app/smartgia-qa-alb/d0f02b31c3e58873",
            "arn_suffix": "app/smartgia-qa-alb/d0f02b31c3e58873",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "smartgia-qa-alb-1242256169.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:843916523003:loadbalancer/app/smartgia-qa-alb/d0f02b31c3e58873",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "smartgia-qa-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cfa6c01b4ca6e265"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ade6059025d163d"
              },
              {
                "subnet_id": "subnet-05270131c92e86204"
              }
            ],
            "subnets": [
              "subnet-02ade6059025d163d",
              "subnet-05270131c92e86204"
            ],
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-alb",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-alb",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-0b26879d43ebba5e5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843916523003:listener/app/smartgia-qa-alb/d0f02b31c3e58873/56c2f18d7411faa1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:843916523003:targetgroup/smartgia-qa-tg/c7eb79f9d414b9d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:843916523003:listener/app/smartgia-qa-alb/d0f02b31c3e58873/56c2f18d7411faa1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:843916523003:loadbalancer/app/smartgia-qa-alb/d0f02b31c3e58873",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843916523003:targetgroup/smartgia-qa-tg/c7eb79f9d414b9d5",
            "arn_suffix": "targetgroup/smartgia-qa-tg/c7eb79f9d414b9d5",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:843916523003:targetgroup/smartgia-qa-tg/c7eb79f9d414b9d5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "smartgia-qa-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-tg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-tg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0544f0a10852e61b9",
            "association_id": "eipassoc-01750167d13cd669d",
            "connectivity_type": "public",
            "id": "nat-09bb910162cc6619f",
            "network_interface_id": "eni-04cee1fda68ba4e6b",
            "private_ip": "10.10.1.135",
            "public_ip": "35.171.200.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05270131c92e86204",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-nat",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-nat",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:route-table/rtb-0d376993b6c4a4178",
            "id": "rtb-0d376993b6c4a4178",
            "owner_id": "843916523003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09bb910162cc6619f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-private-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-private-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:route-table/rtb-0c8846db004a38818",
            "id": "rtb-0c8846db004a38818",
            "owner_id": "843916523003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa0af9ceb1ef11e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-public-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-public-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2c50d6de8153677",
            "route_table_id": "rtb-0d376993b6c4a4178",
            "subnet_id": "subnet-070dbb1e072202da5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0a4a34cb62d3afd",
            "route_table_id": "rtb-0d376993b6c4a4178",
            "subnet_id": "subnet-0e72a7d5aac736349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03177d55c6e57b8e8",
            "route_table_id": "rtb-0c8846db004a38818",
            "subnet_id": "subnet-05270131c92e86204"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0214cb8a85012c462",
            "route_table_id": "rtb-0c8846db004a38818",
            "subnet_id": "subnet-02ade6059025d163d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:security-group/sg-0cfa6c01b4ca6e265",
            "description": "Allow HTTP/HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfa6c01b4ca6e265",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "smartgia-alb-sg",
            "name_prefix": "",
            "owner_id": "843916523003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "qa",
              "Name": "smartgia-alb-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-alb-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:security-group/sg-0c7200e8f9de55a2c",
            "description": "SSH access to Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7200e8f9de55a2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "18.206.107.24/29",
                  "18.206.107.32/29",
                  "18.206.107.40/29",
                  "18.206.107.48/29"
                ],
                "description": "SSH from EC2 Instance Connect us-east-1",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "181.199.46.135/32"
                ],
                "description": "SSH from my IP (secondary)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "181.199.58.240/32"
                ],
                "description": "SSH from my IP (current)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "smartgia-qa-bastion-sg",
            "name_prefix": "",
            "owner_id": "843916523003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-bastion-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-bastion-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:security-group/sg-0b4380224c9deec52",
            "description": "Allow SSH from Bastion + HTTP from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4380224c9deec52",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cfa6c01b4ca6e265"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7200e8f9de55a2c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "smartgia-qa-private-sg-20260114203904281000000002",
            "name_prefix": "smartgia-qa-private-sg-",
            "owner_id": "843916523003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-private-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-private-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:subnet/subnet-070dbb1e072202da5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070dbb1e072202da5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843916523003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-private-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-private-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:subnet/subnet-0e72a7d5aac736349",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e72a7d5aac736349",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843916523003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-private-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-private-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:subnet/subnet-05270131c92e86204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05270131c92e86204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843916523003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-public-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-public-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:subnet/subnet-02ade6059025d163d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ade6059025d163d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843916523003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-public-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-public-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-0b26879d43ebba5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843916523003:vpc/vpc-0b26879d43ebba5e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-05fc918903f0535b8",
            "default_route_table_id": "rtb-09e01da0b5b4fc147",
            "default_security_group_id": "sg-09de3c903ce094019",
            "dhcp_options_id": "dopt-0b7837346ffe70700",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b26879d43ebba5e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e01da0b5b4fc147",
            "owner_id": "843916523003",
            "tags": {
              "Env": "qa",
              "Name": "smartgia-qa-vpc",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "qa",
              "Name": "smartgia-qa-vpc",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}